# folk-sequence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: channel-metadata.md  gemini-prompts.md  pipeline.md
folkseq/: __init__.py  cli.py  essay.py  schedule.py  status.py  thumbnail.py  transcode.py  upload.py
