[project]
name = "folk-sequence"
version = "0.1.0"
description = "Automated pipeline for processing and uploading Bitwig Studio screen recordings to YouTube"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "google-genai>=1.0",
]

[project.scripts]
folkseq = "folkseq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["folkseq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
